--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Assignment04</title>
     <style>
         section{
             display: flex;
@@ -16,11 +16,11 @@
             font-size: 3rem;
             color: #333;
             font-weight: bold;
-            background: #00ff48;
+            background: #00bbff;
         }
 
         a:hover {
-            color: #0066cc;
+            color: #fffb00;
         }
     </style>
 </head>
